Fixes horizontal scrolling

--- a/src/assets/editor.css
+++ b/src/assets/editor.css
@@ -5,16 +5,17 @@
     display: flex;
     height: 100%;
     justify-content: center;
-    
-
     background-color: rgba(90, 90, 90, 0.25);
     border: none;
     outline: none;
     z-index: 0;
+    
 }
 
 .padding {  
-    margin-top: 0.7vh;
+    box-sizing: border-box;
+    padding-top: 0.5em;
+    /* padding-bottom: 0.5em; */
 }
 
 /* keeps editor and line number formatting consistent */
@@ -25,78 +26,98 @@
 }
 
 .editor { 
-    overflow: scroll;
+
+    box-sizing: border-box;
+    overflow: hidden;
     z-index: 0;
     display: flex;
-    position: relative;
+    position:relative;
+
     width: 100%;
     height: 100%;
 
-    border: none;
-    outline: none;
-
-    color: rgba(200, 200, 200, 0.9);
+    color: rgba(208, 208, 208, 0.9);
 }
 
 .editor textarea {
-
+    box-sizing: border-box;
     display: flex;
-    overflow: hidden;
+    overflow: auto;
     position: absolute;
     white-space: pre;
+
     resize: none;
     background-color: transparent;
     color: transparent;
     caret-color: rgba(200, 200, 200, 0.9);
-    padding:0;
     font-size: inherit;
     font-family: inherit;
     line-height: inherit;
-    width: 100%;
-    height:100%;
+    
+    width: inherit;
+    height:inherit;
+    max-width: inherit;
+    max-height:inherit;
+
+    margin:0;
+    padding-bottom: -2em;
+    padding-right:0.5em;
+    padding-left:1em;
     border: none;
     outline: none;
-    /* z-index: 0.9; */
+    width: 100%;
+    height:100%;
+
+    z-index: 2000;
 }
 
 .editor pre {
-    margin:0;
-    padding:0;
+    box-sizing: border-box;
     display: flex;
-    width: 100%;
-    /* height: 100%; */
+    position:relative;
+
     white-space: pre;
-    overflow: hidden;
+    word-wrap: normal;
+
+
+    overflow: auto;
+    overflow-x: auto;
     font-size: inherit;
     font-family: inherit;
     line-height: inherit;
-    background-color: transparent;
     border-radius: 0;
+    background-color: transparent;
+
+    margin:0;
+    padding-right:0.5em;
+    padding-left:1em;
     border: none;
     outline: none;
-
+    width: 100%;
+    height:100%;
 }
 
 .editor code {
-    z-index: 1000;
-    display:block;
-    white-space: pre;
+    box-sizing: border-box;
+    word-wrap: normal;
 
-    overflow: auto;
+    overflow: hidden;
     pointer-events: none;
     padding:0;
 
-    width: 100%;
-    height: 100%;
+
+    position:sticky;
+
     font-size: inherit;
     font-family: inherit;
     line-height: inherit;
     background-color: transparent;
+
     border: none;
     outline: none;
-
+    width: 100%;
+    height:100%;
 }
-
 
 
 .editor-gutter-container {
@@ -108,18 +129,28 @@
     justify-content: right;
     background-color: rgba(25, 25, 25, 0.6);
     color: rgba(150, 150, 150, 0.7);
+
 }
 
 
 .editor-gutter {
     /* margin-top: 0.7vh; */
+    box-sizing: border-box;
+
     overflow-y:auto;
     padding-right: 0.5em;
-    width: inherit;
-    height:inherit;
+    width: 100%;
+    height:100%;
     justify-content: right;
     text-align: right;
 }
+
+
+/* Hide the gutter scrollbar but allow scrolling */
+.editor-container::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+
 
 /* Hide the gutter scrollbar but allow scrolling */
 .editor-gutter-container::-webkit-scrollbar { 
@@ -129,11 +160,6 @@
 
 /* Hide the gutter scrollbar but allow scrolling */
 .editor-gutter::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
-}
-
-/* Hide the gutter scrollbar but allow scrolling */
-.editor::-webkit-scrollbar { 
     display: none;  /* Safari and Chrome */
 }
 
@@ -179,6 +205,6 @@
     background-color: rgba(70, 70, 70, 0.45);
 }
 
-::-webkit-scrollbar-corner {
+/* ::-webkit-scrollbar-corner {
     background-color: rgba(15, 15, 15, 0.5);
-}
+} */
